Fix styling on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ footer p{
     }
 
     .message {
-        font-size: 23px;
+        font-size: 20px;
     }
     
     .scores {
@@ -171,7 +171,7 @@ footer p{
     }
 
     .computerContainer h1, span {
-        font-size: 70px;
+        font-size: 67px;
     }
 
     footer p{
